# PhysiFormer

./: .gitignore  README.md  app.py  eval_publish_losses.py  prepare_publish_eval_inputs.py  pyproject.toml  requirements.txt  run_official_demo_inference.py  run_official_demo_render_existing.py
eval_assets/: eval_split.json
eval_assets/eval_precomp/2obj_elastic/: sample_000000.npz
eval_assets/eval_precomp/3obj_rigid/: sample_000000.npz
eval_assets/eval_precomp/4obj_elastic/: sample_000000.npz
eval_assets/eval_precomp/5obj_rigid/: sample_000000.npz
indistri_examples/elastic/0/: metadata.json  scene_multiobj.json
indistri_examples/elastic/1/: metadata.json  scene_multiobj.json
indistri_examples/elastic/2/: metadata.json  scene_multiobj.json
indistri_examples/elastic/3/: scene_multiobj.json
indistri_examples/elastic/sample_000203/: metadata.json
indistri_examples/rigid/0/: metadata.json
indistri_examples/rigid/1/: metadata.json  scene_multiobj.json
indistri_examples/rigid/2/: scene_multiobj.json
indistri_examples/rigid/3/: scene_multiobj.json
indistri_examples/rigid/4/: metadata.json
indistri_examples/rigid/5/: metadata.json
indistri_examples/rigid/sample_000007/: scene_multiobj.json
indistri_examples/rigid/sample_000969/: metadata.json
indistri_examples/rigid/sample_001151/: metadata.json
indistri_examples/rigid/sample_001557/: scene_multiobj.json
ood_examples/2obj_cow_horse/10/: metadata.json
scripts/: run_indistri_example.sh  run_ood_example.sh
src/official_demo_inference/: __init__.py  launcher.py  paths.py  render_existing.py
(+1714 files in other folders)
