[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "physiformer-official-demo-inference"
version = "0.1.0"
description = "Compact PhysiFormer inference export for the official demo samples."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "tqdm",
  "matplotlib",
]

[project.optional-dependencies]
render = ["imageio", "imageio-ffmpeg"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
official_demo_inference = ["configs/*.json"]
